--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=monitor_viewer
 
 # Database Connection
-spring.datasource.url=jdbc:mysql://localhost:3306/system_monitor
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://192.168.1.7:3306/system_monitor
+spring.datasource.username=remote_user
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
