--- a/pom.xml
+++ b/pom.xml
@@ -47,11 +47,11 @@
 
         <!-- MySQL Connector (To connect with MySQL Database) -->
         <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <version>8.3.0</version>  <!-- Corrected version -->
-            <scope>runtime</scope>
-        </dependency>
+    <groupId>com.mysql</groupId>
+    <artifactId>mysql-connector-j</artifactId>
+    <version>8.3.0</version>
+    <scope>runtime</scope>
+</dependency>
 
         <!-- Spring Boot DevTools (Optional: Helps with auto-restart during development) -->
         <dependency>
